--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
+.ipynb_checkpoints/
+data processing/.ipynb_checkpoints/ 
 
-data processing/.ipynb_checkpoints/Creating core  JSON files-checkpoint.ipynb
