completed data work

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 .ipynb_checkpoints/
 data processing/.ipynb_checkpoints/ 
 
+data processing/.ipynb_checkpoints/Creating core  JSON files-checkpoint.ipynb
